# weil-hackathon

./: README.md
ChainVest/: README.md  run_test.py
ChainVest/schemas/: economics_input.py
ChainVest/tools/: unit_economics.py
Team-Beamer/: README.md  WEILLIPTIC_MCP_SETUP.md  api.py  requirements.txt  run_test.py
Team-Beamer/agent/: aggregator.py  planner.py  state.py  workflow.py
Team-Beamer/audit/: auditor.py
Team-Beamer/blockchain/: logger.py
Team-Beamer/chainvest-ui/: package-lock.json  package.json
Team-Beamer/chainvest-ui/src/app/: globals.css  page.tsx
Team-Beamer/chainvest-ui/src/components/: BlockchainPanel.tsx  ExecutionTimeline.tsx  ExplanationPanel.tsx  InputForm.tsx  RiskDashboard.tsx  types.ts
Team-Beamer/schemas/: financial_input.py
Team-Beamer/tools/: business_assessment.py  financial_trends.py  loan_scorecard.py  startup_scorecard.py  unit_economics.py  vc_scorecard.py
Team-Beamer/weil_applet_rust/: Cargo.toml  README.md  chainvest.widl  manifest.json
Team-Beamer/weil_applet_rust/scripts/: build_wasm.sh  generate_bindings.sh
Team-Beamer/weil_applet_rust/src/: lib.rs
Team-Beamer/weil_mcp/: chainvest.widl  chainvest_mcp.py  deployed_client.py
