[package]
name = "chainvest_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
weil_rs = { path = "../../wadk/adk/rust/weil_rs/" }
weil_macros = { path = "../../wadk/adk/rust/weil_rs/weil_macros" }
weil_contracts = { path = "../../wadk/adk/rust/weil_rs/weil_contracts" }

[lib]
crate-type = ["cdylib"]
